script al final del body

--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
                     </section>
                     <section class="section-box">
                         <img class="art-img" src="images/man-1283748_1280.jpg" alt="">
-                        <article class="art-title">Imagen 4</article>                        <p class="bajada-art">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque eum nostrum culpa vel delectus eveniet in ut itaque molestias! Error, quidem.</p>
+                        <article class="art-title">Imagen 4</article>                        
+                        <p class="bajada-art">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque eum nostrum culpa vel delectus eveniet in ut itaque molestias! Error, quidem.</p>
                     </section>
                 </div>
             </section>
         </main>
         <footer id="pie">Algunos derechos reservados, 2021</footer>
     </main>
+    <script src="js/arrays.js"></script>
 </body>
-<script src="js/arrays.js"></script>
 
 </html>
